build_log.txt
Processing esp32cam (platform: espressif32; board: esp32cam; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32cam.html
PLATFORM: Espressif 32 (6.12.0) > AI Thinker ESP32-CAM
HARDWARE: ESP32 240MHz, 320KB RAM, 4MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20017.241212+sha.dcc1105b 
 - tool-esptoolpy @ 2.40900.250804 (4.9.0) 
 - toolchain-xtensa-esp32 @ 8.4.0+2021r2-patch5
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 38 compatible libraries
Scanning dependencies...
Dependency Graph
|-- WiFiManager @ 2.0.17+sha.4131fe6
|-- ESP Async WebServer @ 3.0.6
|-- AsyncTCP @ 3.3.2+sha.ef448a8
|-- esp32cam @ 0.0.20240110
|-- ESPmDNS @ 2.0.0
|-- WiFi @ 2.0.0
Building in release mode
Compiling .pio\build\esp32cam\src\main.cpp.o
src/main.cpp: In function 'void setup()':
src/main.cpp:38:9: error: 'class esp32cam::Config' has no member named 'setJpegQuality'; did you mean 'setJpeg'?
     cfg.setJpegQuality(12);
         ^~~~~~~~~~~~~~
         setJpeg
Archiving .pio\build\esp32cam\lib75e\libAsync TCP.a
*** [.pio\build\esp32cam\src\main.cpp.o] Error 1
========================== [FAILED] Took 2.72 seconds ==========================
